feat: rewrite openapi
